<resources>
    <string name="app_name">Comic Collection</string>

    <!-- For data entry of titles -->
    <string name="title_entry_name">Title name (e.g., Action Comics)</string>
    <string name="title_entry_first_issue">First issue (of interest)</string>
    <string name="title_entry_last_issue">Last issue (of interest)</string>

    <string name="add_title">Add A Title</string>
    <string name="edit_title">Edit Title</string>
    <string name="positive_add_title">Add</string>
    <string name="positive_edit_title">Edit</string>
    <string name="negative_add_title">Cancel</string>
    <string name="negative_edit_title">Cancel</string>

    <string name="title_error_last_issue_before_first_issue">The first issue must come before the last issue.</string>
    <string name="title_error_duplicate_title">Duplicate title names are not allowed.</string>
    <string name="title_warning_will_delete">This may delete issues from your collection.  Press again to confirm.</string>
    <string name="title_name_is_required">The title name is required.</string>
    <string name="title_first_issue_is_required">The first issue is required.</string>
    <string name="title_last_issue_is_required">The last issue is required.</string>

    <!-- For view and entry of issues -->
    <string name="toggle_button_owned">Owned</string>
    <string name="toggle_button_wanted">Wanted</string>

    <!-- Indicates that an upgrade is wanted for this issue -->
    <string name="upgrade_wanted">UPGRADE</string>

    <!-- Menu options for display preferences for issues -->
    <string name="show_collection">Show Collection</string>
    <string name="show_want_list">Show Want List</string>
    <string name="show_all_issues">Show All</string>

    <!-- Banner values for current display preference for issues -->
    <string name="showing_collection">MY COLLECTION</string>
    <string name="showing_want_list">MY WANT LIST</string>
    <string name="showing_all_issues">ALL ISSUES</string>

    <!-- Action menu items for the issues screen, when one or more issues are selected.  -->
    <string name="mark_owned">Mark Owned</string>
    <string name="mark_wanted">Mark Wanted</string>
    <string name="dont_want">Don\'t Want</string>

    <!-- Strings for group categories in the Copies activity -->
    <string name="owned_copy_category">Copies I Own</string>
    <string name="forsale_copy_category">Copies For Sale</string>
    <string name="sold_copy_category">Sold Copies</string>

    <!-- Keys for extras passed into a new CopiesActivity -->
    <string name="title_extra">copy_title</string>
    <string name="issue_extra">copy_issue</string>

    <!-- Format string for showing a title and issue together -->
    <string name="title_and_issue">%1$s %2$s</string>
    <string name="no_grade">NG</string>

    <!-- For Collection Stats screen -->
    <string name="collection_stats_title">Collection Stats</string>
    <plurals name="stats_total_issues">
        <item quantity="zero">You don\'t own any comics yet.</item>
        <item quantity="one"><![CDATA[You have <b>%d</b> comic.]]></item>
        <item quantity="other"><![CDATA[You have <b>%d</b> comics total.]]></item>
    </plurals>
    <string name="stats_total_value"><![CDATA[The estimated value of your collection is <b>\$%.2f</b>.]]></string>
    <string name="dismiss_stats_dialog">OK</string>
    <string name="stats_error">Can\'t get collection stats right now.  Please try again.</string>

    <!-- Context menu options. -->
    <string name="context_menu_edit">EDIT</string>
    <string name="context_menu_delete">DELETE</string>
    <string name="context_menu_record_sale">RECORD SALE</string>
    <string name="context_menu_purchase">PURCHASE</string>
    <string name="context_menu_price_change">PRICE CHANGE</string>
    <string name="context_menu_undo_sale">UNDO SALE</string>

    <!-- For adding copies.  -->
    <string name="add_copy">Add a copy of %1$s that…</string>
    <string name="add_copy_owned">…I own.</string>
    <string name="add_copy_for_sale">…is for sale in the market.</string>
    <string name="add_copy_sold">…has sold in the market.</string>

    <!-- For adding or editing copies.  -->
    <string name="copy_grade">Grade</string>
    <string name="copy_value">Estimated Value</string>
    <string name="copy_purchase_date">Purchase Date</string>
    <string name="copy_purchase_price">Purchase Price</string>
    <string name="copy_purchased_from">Purchased From</string>
    <string name="copy_offer_date">Offer Date</string>
    <string name="copy_offer_price">Offer Price</string>
    <string name="copy_seller">Seller</string>
    <string name="copy_sale_date">Sale Date</string>
    <string name="copy_sale_price">Sale Price</string>
    <string name="copy_notes">Notes</string>

    <!-- Button labels when adding or editing individual copies. -->
    <string name="positive_add_copy">Add</string>
    <string name="positive_edit_copy">Edit</string>
    <string name="negative_add_copy">Cancel</string>
    <string name="negative_edit_copy">Cancel</string>
    <string name="positive_record_sale">Confirm</string>
    <string name="negative_record_sale">Cancel</string>

    <!-- Key used to access Copy object in a Bundle.  -->
    <string name="copy_bundle_key">copy</string>

    <string name="copy_error_no_title_issue">No title or issue number was provided.  Please cancel.</string>


</resources>