<?xml version="1.0" encoding="utf-8"?>
<!-- This layout will be used when adding or editing copies in a dialog.  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/copy_layout_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>

    <EditText
        android:id="@+id/edit_copy_grade"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:hint="@string/copy_grade" />

    <EditText
        android:id="@+id/edit_copy_value"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/copy_layout_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/copy_value" />

    <EditText
        android:id="@+id/edit_copy_price"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_copy_grade"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:hint="@string/copy_purchase_price"/>

    <EditText
        android:id="@+id/edit_copy_date"
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/copy_layout_guideline"
        app:layout_constraintTop_toTopOf="@id/edit_copy_price"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:focusable="false"
        android:hint="@string/copy_purchase_date"/>

    <EditText
        android:id="@+id/edit_copy_dealer"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_copy_price"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:maxLength="20"
        android:hint="@string/copy_seller"/>

    <EditText
        android:id="@+id/edit_copy_notes"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_copy_dealer"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:maxLength="40"
        android:hint="@string/copy_notes"/>

    <TextView
        android:id="@+id/copy_box_error_text"
        android:textColor="@color/colorErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>